--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_dweights)
 export(get_starting_point)
 export(get_weights)
 export(make_problem)
+export(reweight)
 export(sse)
 export(targets_mat)
 export(targets_vec)
