--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,10 @@ Title: Tools for Weighting Microdata Files
 Version: 0.1.0
 Author: person("Don", "Boyd", , "donboyd5@gmail.com", role = c("aut", "cre"))
 Maintainer: Don Boyd <donboyd5@gmail.com>
-Description: Tools for splitting record weights for a microdata file across states or 
-    other geographies in a manner that hits or comes close to targets for those geographies, 
-    for reweighting microdata files, and for other weighting tasks.
+Description: Tools for (1) splitting record weights for a microdata file across 
+    states or other geographies in a manner that hits or comes close to targets 
+    for those geographies, (2) for reweighting microdata files, and (3) for 
+    other weighting tasks.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -16,6 +17,7 @@ Imports:
     magrittr,
     minpack.lm,
     nleqslv,
+    nloptr,
     purrr,
     rlang,
     stats,
